--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+#canvas {
+  height: 100vh;
+  padding: 0;
+  margin: 0;
+}
