--- a/frontend/src/estilos.css
+++ b/frontend/src/estilos.css
@@ -32,6 +32,19 @@
     padding-bottom: 14px;
 }
 
+/* width */
+.w-10 {
+    width: 10%;
+}
+
+.w-15 {
+    width: 15%;
+}
+
+.w-20 {
+    width: 20%;
+}
+
 /* Max width */
 .mw-100 {
     max-width: 100%;
