Fix style card diagram

--- a/frontend/src/styles/customStyles.css
+++ b/frontend/src/styles/customStyles.css
@@ -178,7 +178,8 @@ table.table-cursor tbody {
   width: 100%;
 }
 
-.card-diagrams .svg-diagram svg rect {
+.card-diagrams .svg-diagram svg rect,
+.card-diagrams .svg-diagram svg polyline {
   cursor: pointer;
 }
 
