--- a/frontend/src/styles/customStyles.css
+++ b/frontend/src/styles/customStyles.css
@@ -79,9 +79,13 @@ code {
 .pool-note-error {
   background-color: #E04B5A;
   color: White;
-  border-radius: 5px;
-  font-size: 14px;
+  border-radius: 20px;
+  border-width: 2px;
+  border-style: solid;
+  font-size: 12px;
   padding: 8px;
+  padding-left: 16px;
+  padding-right: 16px;
   display: flex;
   text-align: center;
 }
@@ -89,9 +93,11 @@ code {
 .task-note-error {
   background-color: #E04B5A;
   color: White;
-  border-radius: 5px;
-  font-size: 14px;
-  padding: 8px;
+  border-radius: 20px;
+  border-width: 2px;
+  border-style: solid;
+  font-size: 12px;
+  padding: 3px;
   width: 37px;
   text-align: center;
 }
@@ -285,4 +291,9 @@ body::-webkit-scrollbar-track {
 /* Tooltip */
 .tooltip-bg-one {
   --bs-tooltip-bg: var(--color-one);
+}
+
+/* Instructions */
+#instructions-modeler {
+  width: 187px;
 }
