--- a/frontend/src/styles/customStyles.css
+++ b/frontend/src/styles/customStyles.css
@@ -259,7 +259,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 body::-webkit-scrollbar-track {
-  background: #fff;
+  background: var(--color-two);
 }
 
 /* Content */
