--- a/frontend/src/styles/styles.css
+++ b/frontend/src/styles/styles.css
@@ -187,7 +187,7 @@ h5,
 
 /* Backgrounds */
 .bg-one {
-    background-color: var(--color-one);
+    background-color: var(--color-one) !important;
 }
 
 .bg-two {
